ANTLR/Verifier/src/CSC488Parser.java
// Generated from W:\workspace\CSC488\ANTLR\Grammar\CSC488.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CSC488Parser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		L_PAREN=1, R_PAREN=2, L_SQUARE=3, R_SQUARE=4, L_CURLEY=5, R_CURLEY=6, 
		GREATER=7, LESS=8, PLUS=9, MINUS=10, TIMES=11, DIVIDE=12, EQUAL=13, DOT=14, 
		COMMA=15, COLON=16, QUESTION=17, NOT=18, AND=19, OR=20, INTEGER=21, BOOLEAN=22, 
		PROCEDURE=23, FUNC=24, DO=25, ELSE=26, END=27, EXIT=28, FI=29, FORWARD=30, 
		GET=31, IF=32, PUT=33, REPEAT=34, RESULT=35, RETURN=36, NEWLINE=37, THEN=38, 
		WHEN=39, WHILE=40, UNTIL=41, VAR=42, IDENT=43, INTCONST=44, STRING=45, 
		COMMENT=46, WS=47;
	public static final String[] tokenNames = {
		"<INVALID>", "'('", "')'", "'['", "']'", "'{'", "'}'", "'>'", "'<'", "'+'", 
		"'-'", "'*'", "'/'", "'='", "'.'", "','", "':'", "'?'", "'not'", "'and'", 
		"'or'", "'integer'", "'boolean'", "'proc'", "'func'", "'do'", "'else'", 
		"'end'", "'exit'", "'fi'", "'forward'", "'get'", "'if'", "'put'", "'repeat'", 
		"'result'", "'return'", "'newline'", "'then'", "'when'", "'while'", "'until'", 
		"'var'", "IDENT", "INTCONST", "STRING", "COMMENT", "WS"
	};
	public static final int
		RULE_program = 0, RULE_scope = 1, RULE_declaration = 2, RULE_functionHead = 3, 
		RULE_procedureHead = 4, RULE_parameters = 5, RULE_parameter = 6, RULE_variablenames = 7, 
		RULE_bound = 8, RULE_generalBound = 9, RULE_type = 10, RULE_statement = 11, 
		RULE_variable = 12, RULE_output = 13, RULE_input = 14, RULE_text = 15, 
		RULE_arguments = 16, RULE_expression = 17, RULE_or_expr = 18, RULE_and_expr = 19, 
		RULE_not_expr = 20, RULE_pred_expr = 21, RULE_add_expr = 22, RULE_mul_expr = 23, 
		RULE_unr_expr = 24, RULE_term_expr = 25, RULE_variablename = 26, RULE_arrayname = 27, 
		RULE_functionname = 28, RULE_parametername = 29, RULE_procedurename = 30;
	public static final String[] ruleNames = {
		"program", "scope", "declaration", "functionHead", "procedureHead", "parameters", 
		"parameter", "variablenames", "bound", "generalBound", "type", "statement", 
		"variable", "output", "input", "text", "arguments", "expression", "or_expr", 
		"and_expr", "not_expr", "pred_expr", "add_expr", "mul_expr", "unr_expr", 
		"term_expr", "variablename", "arrayname", "functionname", "parametername", 
		"procedurename"
	};

	@Override
	public String getGrammarFileName() { return "CSC488.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public CSC488Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CSC488Parser.EOF, 0); }
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62); scope();
			setState(63); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScopeContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).enterScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).exitScope(this);
		}
	}

	public final ScopeContext scope() throws RecognitionException {
		ScopeContext _localctx = new ScopeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_scope);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); match(L_CURLEY);
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PROCEDURE) | (1L << FUNC) | (1L << FORWARD) | (1L << VAR))) != 0)) {
				{
				{
				setState(66); declaration();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << L_CURLEY) | (1L << EXIT) | (1L << GET) | (1L << IF) | (1L << PUT) | (1L << REPEAT) | (1L << RESULT) | (1L << RETURN) | (1L << WHILE) | (1L << IDENT))) != 0)) {
				{
				{
				setState(72); statement();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78); match(R_CURLEY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public List<VariablenamesContext> variablenames() {
			return getRuleContexts(VariablenamesContext.class);
		}
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public FunctionHeadContext functionHead() {
			return getRuleContext(FunctionHeadContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VariablenamesContext variablenames(int i) {
			return getRuleContext(VariablenamesContext.class,i);
		}
		public ProcedureHeadContext procedureHead() {
			return getRuleContext(ProcedureHeadContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		int _la;
		try {
			setState(102);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(80); match(VAR);
				setState(81); variablenames();
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(82); match(COMMA);
					setState(83); variablenames();
					}
					}
					setState(88);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(89); match(COLON);
				setState(90); type();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(92); functionHead();
				setState(93); scope();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(95); procedureHead();
				setState(96); scope();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(98); match(FORWARD);
				setState(99); functionHead();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(100); match(FORWARD);
				setState(101); procedureHead();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionHeadContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public FunctionnameContext functionname() {
			return getRuleContext(FunctionnameContext.class,0);
		}
		public FunctionHeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionHead; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).enterFunctionHead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).exitFunctionHead(this);
		}
	}

	public final FunctionHeadContext functionHead() throws RecognitionException {
		FunctionHeadContext _localctx = new FunctionHeadContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionHead);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); match(FUNC);
			setState(105); functionname();
			setState(106); match(L_PAREN);
			setState(108);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(107); parameters();
				}
			}

			setState(110); match(R_PAREN);
			setState(111); match(COLON);
			setState(112); type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedureHeadContext extends ParserRuleContext {
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public ProcedurenameContext procedurename() {
			return getRuleContext(ProcedurenameContext.class,0);
		}
		public ProcedureHeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedureHead; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).enterProcedureHead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).exitProcedureHead(this);
		}
	}

	public final ProcedureHeadContext procedureHead() throws RecognitionException {
		ProcedureHeadContext _localctx = new ProcedureHeadContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_procedureHead);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); match(PROCEDURE);
			setState(115); procedurename();
			setState(116); match(L_PAREN);
			setState(118);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(117); parameters();
				}
			}

			setState(120); match(R_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).enterParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).exitParameters(this);
		}
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); parameter();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(123); match(COMMA);
				setState(124); parameter();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParameternameContext parametername() {
			return getRuleContext(ParameternameContext.class,0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).exitParameter(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_parameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130); parametername();
			setState(131); match(COLON);
			setState(132); type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablenamesContext extends ParserRuleContext {
		public BoundContext bound(int i) {
			return getRuleContext(BoundContext.class,i);
		}
		public List<BoundContext> bound() {
			return getRuleContexts(BoundContext.class);
		}
		public VariablenameContext variablename() {
			return getRuleContext(VariablenameContext.class,0);
		}
		public VariablenamesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variablenames; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).enterVariablenames(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).exitVariablenames(this);
		}
	}

	public final VariablenamesContext variablenames() throws RecognitionException {
		VariablenamesContext _localctx = new VariablenamesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variablenames);
		try {
			setState(147);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(134); variablename();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(135); variablename();
				setState(136); match(L_SQUARE);
				setState(137); bound();
				setState(138); match(R_SQUARE);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(140); variablename();
				setState(141); match(L_SQUARE);
				setState(142); bound();
				setState(143); match(COMMA);
				setState(144); bound();
				setState(145); match(R_SQUARE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoundContext extends ParserRuleContext {
		public TerminalNode INTCONST() { return getToken(CSC488Parser.INTCONST, 0); }
		public List<GeneralBoundContext> generalBound() {
			return getRuleContexts(GeneralBoundContext.class);
		}
		public GeneralBoundContext generalBound(int i) {
			return getRuleContext(GeneralBoundContext.class,i);
		}
		public BoundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bound; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).enterBound(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).exitBound(this);
		}
	}

	public final BoundContext bound() throws RecognitionException {
		BoundContext _localctx = new BoundContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_bound);
		try {
			setState(155);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(149); match(INTCONST);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(150); generalBound();
				setState(151); match(DOT);
				setState(152); match(DOT);
				setState(153); generalBound();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GeneralBoundContext extends ParserRuleContext {
		public TerminalNode INTCONST() { return getToken(CSC488Parser.INTCONST, 0); }
		public GeneralBoundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_generalBound; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).enterGeneralBound(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).exitGeneralBound(this);
		}
	}

	public final GeneralBoundContext generalBound() throws RecognitionException {
		GeneralBoundContext _localctx = new GeneralBoundContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_generalBound);
		try {
			setState(160);
			switch (_input.LA(1)) {
			case INTCONST:
				enterOuterAlt(_localctx, 1);
				{
				setState(157); match(INTCONST);
				}
				break;
			case MINUS:
				enterOuterAlt(_localctx, 2);
				{
				setState(158); match(MINUS);
				setState(159); match(INTCONST);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			_la = _input.LA(1);
			if ( !(_la==INTEGER || _la==BOOLEAN) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public List<OutputContext> output() {
			return getRuleContexts(OutputContext.class);
		}
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ProcedurenameContext procedurename() {
			return getRuleContext(ProcedurenameContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public OutputContext output(int i) {
			return getRuleContext(OutputContext.class,i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<InputContext> input() {
			return getRuleContexts(InputContext.class);
		}
		public InputContext input(int i) {
			return getRuleContext(InputContext.class,i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CSC488Listener ) ((CSC488Listener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_statement);
		int _la;
		try {
			setState(251);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(164); variable();
				setState(165); match(COLON);
				setState(166); match(EQUAL);
				setState(167); expression();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(169); match(IF);
				setState(170); expression();
				setState(171); match(THEN);
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << L_CURLEY) | (1L << EXIT) | (1L << GET) | (1L << IF) | (1L << PUT) | (1L << REPEAT) | (1L << RESULT) | (1L << RETURN) | (1L << WHILE) | (1L << IDENT))) != 0)) {
					{
					{
					setState(172); statement();
					}
					}
					setState(177);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(178); match(FI);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(180); match(IF);
				setState(181); expression();
				setState(182); match(THEN);
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << L_CURLEY) | (1L << EXIT) | (1L << GET) | (1L << IF) | (1L << PUT) | (1L << REPEAT) | (1L << RESULT) | (1L << RETURN) | (1L << WHILE) | (1L << IDENT))) != 0)) {
					{
					{
					setState(183); statement();
					}
					}
					setState(188);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(189); match(ELSE);
				setState(193);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << L_CURLEY) | (1L << EXIT) | (1L << GET) | (1L << IF) | (1L << PUT) | (1L << REPEAT) | (1L << RESULT) | (1L << RETURN) | (1L << WHILE) | (1L << IDENT))) != 0)) {
					{
					{
					setState(190); statement();
					}
					}
					setState(195);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(196); match(FI);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(198); match(WHILE);
				setState(199); expression();
				setState(200); match(DO);
				setState(204);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << L_CURLEY) | (1L << EXIT) | (1L << GET) | (1L << IF) | (1L << PUT) | (1L << REPEAT) | (1L << RESULT) | (1L << RETURN) | (1L << WHILE) | (1L << IDENT))) != 0)) {
					{
					{
					setState(201); statement();
					}
					}
					setState(206);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(207); match(END);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(209); match(REPEAT);
				setState(213);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << L_CURLEY) | (1L << EXIT) | (1L << GET) | (1L << IF) | (1L << PUT) | (1L << REPEAT) | (1L << RESULT) | (1L << RETURN) | (1L << WHILE) | (1L << IDENT))) != 0)) {
					{
					{
					setState(210); statement();
					}
					}
					setState(215);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(216); match(UNTIL);
				setState(217); expression();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(218); match(EXIT);
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(219); match(EXIT);
				setState(220); match(WHEN);
				setState(221); expression();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(222); match(RESULT);
				setState(223); expression();
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(224); match(RETURN);
				}
				break;

			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(225); match(PUT);
				setState(226); output();
				setState(231);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(227); match(COMMA);
					setState(228); output();
					}
					}
					setState(233);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;

			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(234); match(GET);
				setState(235); input();
				setState(240);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(236); match(COMMA);
					setState(237); input();
					}
					}
					setState(242);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;

			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(243); procedurename();
				setState(244); match(L_PAREN);
				setState(246);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << L_PAREN) | (1L << MINUS) | (1L << NOT) | (1L << IDENT) | (1L << INTCONST))) != 0)) {
					{
					setState(245); arguments();
					}
				}

				setState(248); match(R_PAREN);
				}
				break;

			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(250); scope();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ArraynameContext arrayname() {
			return getRuleContext(ArraynameContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ParameternameContext parametername() {
			return getRuleContext(ParameternameContext.class,0);
		}
		public VariablenameContext variablename() {
			return getRuleContext(VariablenameContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
